tg-5989. [FE] Cambiar naming en el código de "signos vitales" o "vital signs" por "factores de riesgo"

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/dialogs/add-risk-factors/add-risk-factors.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/dialogs/add-risk-factors/add-risk-factors.component.scss
@@ -1,6 +1,6 @@
 @import '../../../../../assets/styles/mixins';
 
-.vital-signs {
+.risk-factors {
 	.row-container {
 		display: flex;
 		flex-direction: row;
