--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/factores-de-riesgo-nueva-consulta/factores-de-riesgo-nueva-consulta.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/factores-de-riesgo-nueva-consulta/factores-de-riesgo-nueva-consulta.component.scss
@@ -28,7 +28,7 @@
 	margin-bottom: 3vh;
 }
 
-.signos-vitales-field {
+.factores-de-riesgo-field {
 	display: flex;
 	flex-direction: column;
 	.mat-form-field {
@@ -40,7 +40,7 @@
 	}
 }
 
-.field-icon-vital-sign{
+.field-icon-risk-factor{
 	padding: 25px 15px 20px 5px;
 }
 
