--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/guardia/components/pediatric-triage/pediatric-triage.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/guardia/components/pediatric-triage/pediatric-triage.component.scss
@@ -18,7 +18,7 @@ h4 {
 	width: 60%;
 	min-width: 280px;
 
-	&.vital-sign {
+	&.risk-factor {
 		::ng-deep .mat-form-field-wrapper {
 			padding-bottom: 0;
 			margin-bottom: 0;
