--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/factor-de-riesgo-current/factor-de-riesgo.component.scss-theme.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/factor-de-riesgo-current/factor-de-riesgo.component.scss-theme.scss
@@ -1,9 +1,9 @@
 
 @import "~@angular/material/theming";
 
-@mixin app-signo-vital($theme) {
+@mixin app-factor-de-riesgo($theme) {
 	$palette: map-get($theme, primary);
-	app-signo-vital {
+	app-factor-de-riesgo {
 		mat-card.mat-card {
 			background-color: $primary-bg;
 			div.current-value {
