--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -29,7 +29,8 @@
 						</button>
 					</ng-container>
 
-					<button *appHasRole="['ADMINISTRATIVO']" id="btnPaseCama" name="btnPaseCama" mat-flat-button color="primary" fxFlexFill.xs (click)="goToPaseCama()">
+					<button *appHasRole="['ADMINISTRATIVO']" id="btnPaseCama" name="btnPaseCama" mat-flat-button
+						color="primary" fxFlexFill.xs (click)="goToPaseCama()">
 						<span class="uppercase"
 							[translate]="'internaciones.internacion-paciente.actions.RELOCATE_PATIENT_BED'"></span>
 					</button>
@@ -45,15 +46,15 @@
 				</ng-container>
 
 				<ng-container *ngIf="showDischarge">
-					<button mat-flat-button id="administrative_discharge_button" color="primary" *appHasRole="['ADMINISTRATIVO']"
-						(click)="goToAdministrativeDischarge()">
+					<button mat-flat-button id="administrative_discharge_button" color="primary"
+						*appHasRole="['ADMINISTRATIVO']" (click)="goToAdministrativeDischarge()">
 						<span class="uppercase"
 							[translate]="'internaciones.internacion-paciente.actions.ADMINISTRATIVE_DISCHARGE'"></span>
 					</button>
 				</ng-container>
 
-				<button *appHasRole="['ADMINISTRATIVO']" id="btnPaseCama" name="btnPaseCama" mat-flat-button color="primary" fxFlexFill.xs
-					(click)="goToEditPatient()">
+				<button *appHasRole="['ADMINISTRATIVO']" id="btnPaseCama" name="btnPaseCama" mat-flat-button
+					color="primary" fxFlexFill.xs (click)="goToEditPatient()">
 					<span class="uppercase"
 						[translate]="'internaciones.internacion-paciente.actions.EDIT_PATIENT'"></span>
 				</button>
@@ -62,13 +63,14 @@
 				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
 					<ng-container
 						*appHasRole="['ADMINISTRATIVO', 'ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO', 'ESPECIALISTA_EN_ODONTOLOGIA']">
-						<app-patient-card *ngIf="personPhoto" [patient]="patient$ | async" [personPhoto]="personPhoto"></app-patient-card>
+						<app-patient-card *ngIf="personPhoto" [patient]="patient$ | async" [personPhoto]="personPhoto">
+						</app-patient-card>
 					</ng-container>
 					<ng-container
 						*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD', 'ESPECIALISTA_EN_ODONTOLOGIA']">
-						<app-signos-vitales-summary [internmentEpisodeId]="internmentEpisodeId"
-							[editable]="!epicrisisDoc?.confirmed" [vitalSigns$]="vitalSigns$">
-						</app-signos-vitales-summary>
+						<app-factores-de-riesgo-summary [internmentEpisodeId]="internmentEpisodeId"
+							[editable]="!epicrisisDoc?.confirmed" [riskFactors$]="riskFactors$">
+						</app-factores-de-riesgo-summary>
 					</ng-container>
 					<ng-container
 						*appHasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD', 'ESPECIALISTA_EN_ODONTOLOGIA']">
@@ -92,7 +94,8 @@
 				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
 					<ng-container
 						*appHasRole="['ADMINISTRATIVO', 'ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO', 'ESPECIALISTA_EN_ODONTOLOGIA']">
-						<app-summary-card id="internment_summary_card" [header]="internacionSummary" [canEdit]="['ESPECIALISTA_MEDICO']"
+						<app-summary-card id="internment_summary_card" [header]="internacionSummary"
+							[canEdit]="['ESPECIALISTA_MEDICO']"
 							[editable]="!hasMedicalDischarge && canLoadProbableDischargeDate"
 							(openInNew)="openDialog()">
 							<mat-card-content>
@@ -102,7 +105,8 @@
 							</mat-card-content>
 						</app-summary-card>
 					</ng-container>
-					<ng-container *appHasRole="['ESPECIALISTA_MEDICO','PROFESIONAL_DE_SALUD','ENFERMERO', 'ESPECIALISTA_EN_ODONTOLOGIA']">
+					<ng-container
+						*appHasRole="['ESPECIALISTA_MEDICO','PROFESIONAL_DE_SALUD','ENFERMERO', 'ESPECIALISTA_EN_ODONTOLOGIA']">
 						<app-main-diagnosis-summary [internmentEpisodeId]="internmentEpisodeId"
 							[editable]="!epicrisisDoc">
 						</app-main-diagnosis-summary>
@@ -121,7 +125,8 @@
 					</ng-container>
 					<ng-container
 						*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD', 'ESPECIALISTA_EN_ODONTOLOGIA']">
-						<app-medicacion-summary [medicationsHeader]="medicationsHeader" [medications]="medications$ | async"></app-medicacion-summary>
+						<app-medicacion-summary [medicationsHeader]="medicationsHeader"
+							[medications]="medications$ | async"></app-medicacion-summary>
 					</ng-container>
 					<ng-container
 						*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD', 'ESPECIALISTA_EN_ODONTOLOGIA']">
