--- a/front-end/apps/projects/hospital/src/app/modules/portal-paciente/components/resumen-historia-clinica/resumen-historia-clinica.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/portal-paciente/components/resumen-historia-clinica/resumen-historia-clinica.component.html
@@ -5,18 +5,19 @@
 			<div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
 				<div fxLayout="column" fxFlex="50%" fxLayoutGap="0px">
 					<app-antecedentes-personales-summary [personalHistory]="personalHistory$ | async"
-														 [personalHistoriesHeader]="personalProblemsHeader">
+						[personalHistoriesHeader]="personalProblemsHeader">
 					</app-antecedentes-personales-summary>
 				</div>
 				<div fxLayout="column" fxFlex="50%" fxLayoutGap="0px">
 					<app-antecedentes-familiares-summary [familyHistories]="familyHistories$ | async"
-														 [familyHistoriesHeader]="familyHistoriesHeader">
+						[familyHistoriesHeader]="familyHistoriesHeader">
 					</app-antecedentes-familiares-summary>
 				</div>
 			</div>
 			<div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px">
 				<div fxLayout="column" fxFlex="50%" fxLayoutGap="0px">
-					<app-medicacion-summary [medicationsHeader]="medicationsHeader" [medications]="medications$ | async">
+					<app-medicacion-summary [medicationsHeader]="medicationsHeader"
+						[medications]="medications$ | async">
 					</app-medicacion-summary>
 				</div>
 				<div fxLayout="column" fxFlex="50%" fxLayoutGap="0px">
@@ -30,8 +31,8 @@
 					</app-antropometricos-summary>
 				</div>
 				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
-					<app-signos-vitales-summary [editable]="false" [vitalSigns$]="vitalSigns$">
-					</app-signos-vitales-summary>
+					<app-factores-de-riesgo-summary [editable]="false" [riskFactors$]="riskFactors$">
+					</app-factores-de-riesgo-summary>
 				</div>
 			</div>
 		</div>
