--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/factor-de-riesgo-current/factor-de-riesgo.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/factor-de-riesgo-current/factor-de-riesgo.component.html
@@ -1,4 +1,4 @@
-<mat-card *ngIf="!!vitalSign">
+<mat-card *ngIf="!!riskFactor">
 	<div class="flex-column">
 		<div class="flex-row">
 			<div class="flex-column">
@@ -8,12 +8,12 @@
 				<span class="mat-caption">Último resultado</span>
 			</div>
 			<div class="current-value">
-				<mat-icon *ngIf="vitalSign?.effectiveTime" inline color="accent"
-						  matTooltip="{{ vitalSign?.effectiveTime | date: 'dd/MM/yy - HH:mm' }} hs">
+				<mat-icon *ngIf="riskFactor?.effectiveTime" inline color="accent"
+					matTooltip="{{ riskFactor?.effectiveTime | date: 'dd/MM/yy - HH:mm' }} hs">
 					access_time
 				</mat-icon>
 				<span class="value">
-					{{ vitalSign?.value || '-' }}
+					{{ riskFactor?.value || '-' }}
 				</span>
 			</div>
 		</div>
