--- a/front-end/apps/projects/hospital/src/app/modules/presentation/presentation-mixins.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/presentation-mixins.scss
@@ -1,8 +1,8 @@
 
 @import "./components/detail-box/detail-box.component.scss-theme.scss";
-@import "./components/signo-vital-current/signo-vital.component.scss-theme.scss";
+@import "./components/factor-de-riesgo-current/factor-de-riesgo.component.scss-theme.scss";
 
 @mixin presentation-mixins($theme) {
     @include app-detail-box($theme);
-    @include app-signo-vital($theme);
+    @include app-factor-de-riesgo($theme);
 }
