--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -30,24 +30,24 @@
 					<ng-container
 						*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD', 'ESPECIALISTA_EN_ODONTOLOGIA']">
 						<app-factores-de-riesgo-summary [internmentEpisodeId]="internmentEpisodeId"
-							[editable]="!epicrisisDoc?.confirmed" [riskFactors$]="riskFactors$">
+							[editable]="!epicrisisDoc?.confirmed" [riskFactors$]="internmentSummaryFacadeService.riskFactors$">
 						</app-factores-de-riesgo-summary>
 					</ng-container>
 					<ng-container
 						*appHasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD', 'ESPECIALISTA_EN_ODONTOLOGIA']">
 						<app-antropometricos-summary [internmentEpisodeId]="internmentEpisodeId"
-							[anthropometricData$]="anthropometricData$" [editable]="!epicrisisDoc?.confirmed">
+							[anthropometricData$]="internmentSummaryFacadeService.anthropometricData$" [editable]="!epicrisisDoc?.confirmed">
 						</app-antropometricos-summary>
 					</ng-container>
 					<ng-container
 						*appHasRole="['ESPECIALISTA_MEDICO','ENFERMERO','PROFESIONAL_DE_SALUD','ENFERMERO_ADULTO_MAYOR', 'ESPECIALISTA_EN_ODONTOLOGIA']">
-						<app-internacion-antecedentes-personales-summary [personalHistory]="personalHistory$ | async"
+						<app-internacion-antecedentes-personales-summary [personalHistory]="internmentSummaryFacadeService.personalHistory$ | async"
 							[personalHistoriesHeader]="personalHistoriesHeader">
 						</app-internacion-antecedentes-personales-summary>
 					</ng-container>
 					<ng-container
 						*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD', 'ESPECIALISTA_EN_ODONTOLOGIA']">
-						<app-antecedentes-familiares-summary [familyHistories]="familyHistories$ | async"
+						<app-antecedentes-familiares-summary [familyHistories]="internmentSummaryFacadeService.familyHistories$ | async"
 							[familyHistoriesHeader]="familyHistoriesHeader">
 						</app-antecedentes-familiares-summary>
 					</ng-container>
@@ -69,37 +69,36 @@
 					<ng-container
 						*appHasRole="['ESPECIALISTA_MEDICO','PROFESIONAL_DE_SALUD','ENFERMERO', 'ESPECIALISTA_EN_ODONTOLOGIA']">
 						<app-main-diagnosis-summary [internmentEpisodeId]="internmentEpisodeId"
-							[editable]="!epicrisisDoc">
+							[editable]="!epicrisisDoc" [mainDiagnosis]="internmentSummaryFacadeService.mainDiagnosis$ | async">
 						</app-main-diagnosis-summary>
 					</ng-container>
 					<ng-container
 						*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD', 'ESPECIALISTA_EN_ODONTOLOGIA']">
 						<app-diagnosis-summary [internmentEpisodeId]="internmentEpisodeId"
-							[editable]="!epicrisisDoc && editDiagnosisSummary$">
+							[editable]="!epicrisisDoc && editDiagnosisSummary$" [diagnosis]="internmentSummaryFacadeService.diagnosis$ | async">
 						</app-diagnosis-summary>
 					</ng-container>
 					<ng-container
 						*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD', 'ESPECIALISTA_EN_ODONTOLOGIA']">
 						<app-alergias-summary [internmentEpisodeId]="internmentEpisodeId"
-							[editable]="!epicrisisDoc?.confirmed" [allergies]="allergies$ | async">
+							[editable]="!epicrisisDoc?.confirmed" [allergies]="internmentSummaryFacadeService.allergies$ | async">
 						</app-alergias-summary>
 					</ng-container>
 					<ng-container
 						*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD', 'ESPECIALISTA_EN_ODONTOLOGIA']">
-						<app-medicacion-summary [medicationsHeader]="medicationsHeader"
-							[medications]="medications$ | async"></app-medicacion-summary>
+						<app-medicacion-summary [medicationsHeader]="medicationsHeader" [medications]="internmentSummaryFacadeService.medications$ | async"></app-medicacion-summary>
 					</ng-container>
 					<ng-container
 						*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD', 'ESPECIALISTA_EN_ODONTOLOGIA']">
 						<app-vacunas-summary [internmentEpisodeId]="internmentEpisodeId"
-							[immunizations]="immunizations$ | async" [editable]="!epicrisisDoc?.confirmed">
+							[immunizations]="internmentSummaryFacadeService.immunizations$ | async" [editable]="!epicrisisDoc?.confirmed">
 						</app-vacunas-summary>
 					</ng-container>
 				</div>
 			</div>
 			<ng-container
 				*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD', 'ESPECIALISTA_EN_ODONTOLOGIA']">
-				<app-documents-summary [internmentEpisodeId]="internmentEpisodeId"></app-documents-summary>
+				<app-documents-summary [internmentEpisodeId]="internmentEpisodeId" [clinicalEvaluation]="internmentSummaryFacadeService.clinicalEvaluation$ | async"></app-documents-summary>
 			</ng-container>
 		</div>
 	</section>
