--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.html
@@ -8,13 +8,16 @@
 						  [personPhoto]="personPhoto" [showAdditionalInformation]="true"
 						  [internmentEpisodeProcess]="internmentEpisodeProcess"
 						  [emergencyCareEpisodeInProgress]="emergencyCareEpisodeInProgress?.inProgress">
-			<div info-content fxLayout="row">
-					<div *ngIf="bloodType?.length" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="3px" id="blood-type-container">
+			<div info-content fxLayout="row" fxLayout.xs="column">
+				<div fxLayout="row">
+					<mat-divider *ngIf="bloodType" class="header-divider" [vertical]="true"></mat-divider>
+					<div *ngIf="bloodType?.length" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="3px" >
 							<span class="center-align">{{ 'ambulatoria.paciente.card.GROUP_AND_FACTOR' | translate }}</span>
 							<span class="center-align">{{ 'ambulatoria.paciente.card.SANGUINEOUS' | translate }}</span>
 							<h1 class="color-primary bold" id="blood-type">{{ bloodType }}</h1>
 					</div>
-					<div id="allergy-container" fxLayoutAlign="center center">
+					<mat-divider class="header-divider" [vertical]="true"></mat-divider>
+					<div id="allergy-container" fxLayout="row" fxLayoutAlign="center center">
 						<div *ngIf="criticalAllergies.length>0">
 							<div fxLayout="row" *ngFor="let allergy of criticalAllergies.slice(0,limitAllergies)">
 								<div fxLayout="column">
@@ -22,7 +25,7 @@
 								</div>
 								<div fxLayout="column">
 									<div fxLayout="row">
-										<span class="capitalize-first-letter">{{allergy.snomed.pt}}</span>
+										<span class="allergy-item capitalize-first-letter">{{allergy.snomed.pt}}</span>
 									</div>
 								</div>
 							</div>
@@ -46,6 +49,8 @@
 							</div>
 						</div>
 					</div>
+					<mat-divider class="header-divider" [vertical]="true"></mat-divider>
+				</div>
 					<div *ngIf="internmentEpisodeProcess?.id && internmentEpisodeProcess?.inProgress" id="coverage-container">
 						<div fxLayout="row">
 							<div fxLayout="column">
