--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/ambulatoria-paciente/ambulatoria-paciente.component.scss
@@ -29,11 +29,11 @@
     margin-bottom: 2px;
 }
 
-#allergy-container{
-    border-left: 1px solid #BDBDBD;
-    border-right: 1px solid #BDBDBD;
-}
 
+mat-divider.header-divider{
+	margin-right: 10px;
+	margin-left: 10px;
+}
 .color-disabled {
     color: rgba(0, 0, 0, 0.38);
 }
